--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,7 +1,7 @@
 {{ define "main"}}
 <main id="main">
   <div>
-   <h1 id="title"><a href="{{ "/" | relURL }}"><b>$  /dev/null 💀</b></a></h1>
+   <h1 id="title"><a href="{{ "/" | relURL }}">$  /dev/null 💀</a></h1>
   </div>
 </main>
 {{ end }}
